# attribution-system

./: docker-compose.development.yaml  docker-compose.production.yaml
api/ml/: .gitignore  Dockerfile  Dockerfile.development  Makefile  docker-compose.yaml  initialize.py  main_development.py  main_production.py  pyproject.toml  pyrightconfig.json
api/ml/app/: __init__.py  instances.py
api/ml/app/api/namespaces/: about.py  evaluation.py
api/ml/app/configurations/: configurations.py  embedding_model_configurations.py  feature_selector_configurations.py  interfaces.py  log_configurations.py  machine_learning_model_configurations.py  sector_evaluation_criteria_configurations.py  text_vectorizer_configurations.py
api/ml/app/controllers/: evaluation_controller.py  logs_controller.py  sectors_controller.py
api/ml/app/data/pkl/: chi_selector.pkl  count_vectorizer.pkl
api/ml/app/extensions/: logger.py
api/ml/app/factories/: embedding_model_factory.py
api/ml/app/models/classification_models/: gender_classification.py  interfaces.py
api/ml/app/models/embedding_models/: glove_embedding_model.py  interfaces.py  sbert_embedding_model.py
api/ml/app/models/nli_models/: distilbart_nli_model.py  interfaces.py
api/ml/app/repositories/evaluation_criteria_repository/: evaluation_criteria_repository.py  interfaces.py
api/ml/app/repositories/log_repository/: interfaces.py  log_repository.py
api/ml/app/repositories/sector_repository/: interfaces.py  sector_repository.py
api/ml/app/services/evaluation_criteria_service/: interfaces.py  (+1 more)
api/ml/app/utils/: pdf_handler.py
(+109 files in other folders)
